layout with floats ready

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </section class="container">
         
         <section class="container mw" id="articles">
+          <h1 class="ta-center">ARTICLES</h1>
           <article class="container" id="article1">
             <div class="container">
               <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstatic.standard.co.uk%2Fs3fs-public%2Fthumbnails%2Fimage%2F2016%2F02%2F17%2F10%2Fhomersimpson1702a.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-right">
@@ -53,6 +54,41 @@
           </article>
         </section>
         
+        <section class="container mw ta-center" id="cards">
+          <h1>CARDS</h1>
+          <div class="container card ta-center" id="card1">
+            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+            <div class="container card-content">
+              <h1>Card1</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+            </div>
+          </div>
+
+          <div class="container card ta-center" id="card2">
+            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+            <div class="container card-content">
+              <h1>Card2</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+            </div>
+          </div>
+
+          <div class="container card ta-center" id="card3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+            <div class="container card-content">  
+              <h1>Card3</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+            </div>
+          </div>
+
+          <div class="container card ta-center" id="card4">
+            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+            <div class="container card-content">
+              <h1>Card4</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+            </div>
+          </div>
+
+        </section>
 
       </main>
 
