ready to start applying media queries with floars

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container" id="main-container">
 
-      <header class="mw p-sticky">
+      <header class="p-sticky">
         <nav class="container block" id="main-navbar">
-          <div class="container">
-            <h1 class="inline-block">FLOATS</h1>
+          <div class="mw container">
+            <h2 class="inline-block">FLOATS</h2>
             <ul class="container inline-block p-absolute" id="navbar-ul">
               <li class="inline-block"><a href="#">Example1</a></li>
               <li class="inline-block"><a href="#">Example2</a></li>
@@ -36,55 +36,66 @@
           </div>
         </section class="container">
         
-        <section class="container mw" id="articles">
-          <h1 class="ta-center">ARTICLES</h1>
+        <section class="container" id="articles">
           <article class="container" id="article1">
-            <div class="container">
-              <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstatic.standard.co.uk%2Fs3fs-public%2Fthumbnails%2Fimage%2F2016%2F02%2F17%2F10%2Fhomersimpson1702a.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-right">
-              <h1>Article 1</h1>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
+            <div class="container mw">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-right">
+              <div class="container float-left article-content">
+                <h2>Article 1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nulla illo tenetur nihil explicabo cupiditate quidem maiores ad optio laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo dolorum delectus error quam vitae distinctio molestias, sequi dignissimos accusantium atque officiis expedita? Quos nisi temporibus ipsam quisquam ab necessitatibus. lorem10 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
+                <button>Read more</button>
+              </div>
             </div>
           </article>
           <article class="container" id="article2">
-            <div class="container">
-              <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fstatic.standard.co.uk%2Fs3fs-public%2Fthumbnails%2Fimage%2F2016%2F02%2F17%2F10%2Fhomersimpson1702a.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-left">
-              <h1>Article 2</h1>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
+            <div class="container mw">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fak9.picdn.net%2Fshutterstock%2Fvideos%2F5380769%2Fthumb%2F1.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-left">
+              <div class="container float-right article-content">
+                <h2>Article 2</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
+                <button>Read more</button>
+              </div>
             </div>
           </article>
         </section>
         
-        <section class="container mw ta-center" id="cards">
-          <h1>CARDS</h1>
-          <div class="container card ta-center" id="card1">
-            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
-            <div class="container card-content">
-              <h1>Card1</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+        <section class="container ta-center" id="cards">
+          <div class="container mw">
+            <h2 id="act-heading">ACTIVITIES</h2>
+            <div class="container card ta-center" id="card1">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fyoungpeopledo.files.wordpress.com%2F2014%2F01%2Fcm11.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+              <div class="container card-content">
+                <h2>Card1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+              </div>
+              <button>More info</button>
             </div>
-          </div>
-
-          <div class="container card ta-center" id="card2">
-            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
-            <div class="container card-content">
-              <h1>Card2</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+  
+            <div class="container card ta-center" id="card2">
+              <img src="https://uploads-ssl.webflow.com/573150ef2ab7e0550daae5ea/576c676b6b511f9820b83594_twokayaksriver.jpg">
+              <div class="container card-content">
+                <h2>Card2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+              </div>
+              <button>More info</button>
             </div>
-          </div>
-
-          <div class="container card ta-center" id="card3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
-            <div class="container card-content">  
-              <h1>Card3</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+  
+            <div class="container card ta-center" id="card3">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbackroads-web.s3.amazonaws.com%2Fimages%2Ftrips%2F2018%2Fslideshow%2FWDMI-dolomites-walking-hiking-tour-4.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+              <div class="container card-content">  
+                <h2>Card3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+              </div>
+              <button>More info</button>
             </div>
-          </div>
-
-          <div class="container card ta-center" id="card4">
-            <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fkingoftheflatscreen.com%2Fwp-content%2Fuploads%2F2015%2F07%2F1505239_819378054844815_1311390999190659265_n.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
-            <div class="container card-content">
-              <h1>Card4</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+  
+            <div class="container card ta-center" id="card4">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbelize-travel-blog.chaacreek.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fbelize-kids-snorkeling.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
+              <div class="container card-content">
+                <h2>Card4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
+              </div>
+              <button>More info</button>
             </div>
           </div>
 
