--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
               <li class="inline-block"><a href="#">Example3</a></li>
               <li class="inline-block"><a href="#">Example4</a></li>
             </ul>
-            <img src="./images/profilePicture.jpg" alt="pic" class="float-right p-absolute"  id="profile-pic">
+            <img src="./images/profilePicture.jpg" alt="pic" class="p-absolute"  id="profile-pic">
           </div>
         </nav>
       </header>
 
       <main class="container">
-        <section class="container ta-center" id="showcase">
+        <section class="container" id="showcase">
           <div class="container mw d-absolute" id="showcase-content">
             <h1 class="block">CODE THE DREAM</h1>
             <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae?</p>
@@ -40,10 +40,11 @@
           <article class="container" id="article1">
             <div class="container mw">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-right">
+              
               <div class="container float-left article-content">
                 <h2>Article 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nulla illo tenetur nihil explicabo cupiditate quidem maiores ad optio laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo dolorum delectus error quam vitae distinctio molestias, sequi dignissimos accusantium atque officiis expedita? Quos nisi temporibus ipsam quisquam ab necessitatibus. lorem10 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
-                <button>Read more</button>
+                <button class="btn">Read more</button>
               </div>
             </div>
           </article>
@@ -53,49 +54,49 @@
               <div class="container float-right article-content">
                 <h2>Article 2</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
-                <button>Read more</button>
+                <button class="btn">Read more</button>
               </div>
             </div>
           </article>
         </section>
         
-        <section class="container ta-center" id="cards">
+        <section class="container" id="cards">
           <div class="container mw">
             <h2 id="act-heading">ACTIVITIES</h2>
-            <div class="container card ta-center" id="card1">
+            <div class="container card" id="card1">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fyoungpeopledo.files.wordpress.com%2F2014%2F01%2Fcm11.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
               <div class="container card-content">
                 <h2>Card1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
               </div>
-              <button>More info</button>
+              <button class="btn">More info</button>
             </div>
   
-            <div class="container card ta-center" id="card2">
+            <div class="container card" id="card2">
               <img src="https://uploads-ssl.webflow.com/573150ef2ab7e0550daae5ea/576c676b6b511f9820b83594_twokayaksriver.jpg">
               <div class="container card-content">
                 <h2>Card2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
               </div>
-              <button>More info</button>
+              <button class="btn">More info</button>
             </div>
   
-            <div class="container card ta-center" id="card3">
+            <div class="container card" id="card3">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbackroads-web.s3.amazonaws.com%2Fimages%2Ftrips%2F2018%2Fslideshow%2FWDMI-dolomites-walking-hiking-tour-4.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
               <div class="container card-content">  
                 <h2>Card3</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
               </div>
-              <button>More info</button>
+              <button class="btn">More info</button>
             </div>
   
-            <div class="container card ta-center" id="card4">
+            <div class="container card" id="card4">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbelize-travel-blog.chaacreek.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fbelize-kids-snorkeling.jpg&f=1&nofb=1" alt="bojack" class="thumbnail">
               <div class="container card-content">
                 <h2>Card4</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
               </div>
-              <button>More info</button>
+              <button class="btn">More info</button>
             </div>
           </div>
 
@@ -104,7 +105,7 @@
       </main>
 
     </div>
-    <footer class="container ta-center">
+    <footer class="container">
       <address>777 Heaven St, San Francisco, CA.</address>
       <p>&copy; 2020 CTD</p>
     </footer>
