--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
   <body>
     <div class="container" id="main-container">
 
-      <header class="p-sticky">
-        <nav class="container block" id="main-navbar">
+      <header>
+        <nav class="container">
           <div class="mw container">
-            <h2 class="inline-block">FLOATS</h2>
-            <ul class="container inline-block p-absolute" id="navbar-ul">
-              <li class="inline-block"><a href="#">Example1</a></li>
-              <li class="inline-block"><a href="#">Example2</a></li>
-              <li class="inline-block"><a href="#">Example3</a></li>
-              <li class="inline-block"><a href="#">Example4</a></li>
+            <h2>FLOATS</h2>
+            <ul id="navbar-ul">
+              <li><a href="#">Example1</a></li>
+              <li><a href="#">Example2</a></li>
+              <li><a href="#">Example3</a></li>
+              <li><a href="#">Example4</a></li>
             </ul>
-            <img src="./images/profilePicture.jpg" alt="pic" class="p-absolute"  id="profile-pic">
+            <img src="./images/profilePicture.jpg" alt="pic" id="profile-pic">
           </div>
         </nav>
       </header>
 
       <main class="container">
         <section class="container" id="showcase">
-          <div class="container mw d-absolute" id="showcase-content">
+          <div class="container mw" id="showcase-content">
             <h1 class="block">CODE THE DREAM</h1>
             <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae?</p>
           </div>
@@ -40,7 +40,6 @@
           <article class="container" id="article1">
             <div class="container mw">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="homer" class="thumbnail float-right">
-              
               <div class="container float-left article-content">
                 <h2>Article 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nulla illo tenetur nihil explicabo cupiditate quidem maiores ad optio laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo dolorum delectus error quam vitae distinctio molestias, sequi dignissimos accusantium atque officiis expedita? Quos nisi temporibus ipsam quisquam ab necessitatibus. lorem10 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
