fully responsive, refactoring made

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <main class="container">
         <section class="container" id="showcase">
           <div class="container mw" id="showcase-content">
-            <h1 class="block">CODE THE DREAM</h1>
-            <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae?</p>
+            <h1>CODE THE DREAM</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae?</p>
           </div>
         </section class="container">
         
