Starting with flexbox

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Something Beautiful</title>
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
@@ -118,8 +118,6 @@
     </div>
     <footer class="container">
       <div class="mw container">
-        <p>&copy; 2020 Code the Dream.</p>
-        <address>777 Heaven St, San Francisco, CA.</address>
         <div id="social-media">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
@@ -127,8 +125,13 @@
           <a href="#" class="fa fa-linkedin"></a>
           <a href="#" class="fa fa-instagram"></a>
         </div>
+        <div id="footer-content">
+          <p>&copy; 2020 Code the Dream.</p>
+          <address>777 Heaven St, San Francisco, CA.</address>
+        </div>
       </div>
     </footer>
-  <script src="index.js" type="text/javascript"></script>
+
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
