footer almost fixed, missing fixing articles

--- a/flexbox.html
+++ b/flexbox.html
@@ -124,7 +124,7 @@
       
     </div>
     <footer class="container">
-      <div class="mw container">
+      <div class="mw container" id="foo">
         <div id="social-media">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
