layout almost fixed

--- a/flexbox.html
+++ b/flexbox.html
@@ -49,7 +49,7 @@
 
           <article class="container" id="article1">
             <div class="container mw">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="landscape" class="thumbnail">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="landscape" class="thumbnail order1">
               <div class="container article-content">
                 <h2>Article 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nulla illo tenetur nihil explicabo cupiditate quidem maiores ad optio laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo dolorum delectus error quam vitae distinctio molestias, sequi dignissimos accusantium atque officiis expedita? Quos nisi temporibus ipsam quisquam ab necessitatibus. lorem10 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
@@ -63,7 +63,7 @@
           <article class="container" id="article2">
             <div class="container mw">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fak9.picdn.net%2Fshutterstock%2Fvideos%2F5380769%2Fthumb%2F1.jpg&f=1&nofb=1" alt="landscape" class="thumbnail">
-              <div class="container article-content">
+              <div class="container article-content order1">
                 <h2>Article 2</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
                 <button class="btn">Read more</button>
