--- a/flexbox.html
+++ b/flexbox.html
@@ -49,8 +49,8 @@
 
           <article class="container" id="article1">
             <div class="container mw">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="landscape" class="thumbnail order1">
-              <div class="container article-content">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F6NVCKeiqvtY%2Fmaxresdefault.jpg&f=1&nofb=1" alt="landscape" class="order1">
+              <div class="article-content">
                 <h2>Article 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nulla illo tenetur nihil explicabo cupiditate quidem maiores ad optio laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem illo dolorum delectus error quam vitae distinctio molestias, sequi dignissimos accusantium atque officiis expedita? Quos nisi temporibus ipsam quisquam ab necessitatibus. lorem10 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
                 <button class="btn">Read more</button>
@@ -62,8 +62,8 @@
 
           <article class="container" id="article2">
             <div class="container mw">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fak9.picdn.net%2Fshutterstock%2Fvideos%2F5380769%2Fthumb%2F1.jpg&f=1&nofb=1" alt="landscape" class="thumbnail">
-              <div class="container article-content order1">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fak9.picdn.net%2Fshutterstock%2Fvideos%2F5380769%2Fthumb%2F1.jpg&f=1&nofb=1" alt="landscape">
+              <div class="article-content order1">
                 <h2>Article 2</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, quasi perferendis dolore iste iusto commodi quidem illum labore quis, aut officiis consequatur praesentium dignissimos quas impedit odit ab eius ipsam assumenda quia, consectetur nostrum. Eveniet cum hic, dolorem dolorum eaque temporibus et exercitationem sit perferendis vel soluta placeat incidunt amet!</p>
                 <button class="btn">Read more</button>
@@ -81,7 +81,7 @@
           <div class="container mw" id="all-cards">
 
             <div class="container card trans2" id="card1">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fyoungpeopledo.files.wordpress.com%2F2014%2F01%2Fcm11.jpg&f=1&nofb=1" alt="activity" class="thumbnail">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fyoungpeopledo.files.wordpress.com%2F2014%2F01%2Fcm11.jpg&f=1&nofb=1" alt="activity">
               <div class="container card-content">
                 <h2>Card1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
@@ -99,7 +99,7 @@
             </div>
   
             <div class="container card trans2" id="card3">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbackroads-web.s3.amazonaws.com%2Fimages%2Ftrips%2F2018%2Fslideshow%2FWDMI-dolomites-walking-hiking-tour-4.jpg&f=1&nofb=1" alt="activity" class="thumbnail">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbackroads-web.s3.amazonaws.com%2Fimages%2Ftrips%2F2018%2Fslideshow%2FWDMI-dolomites-walking-hiking-tour-4.jpg&f=1&nofb=1" alt="activity">
               <div class="container card-content">  
                 <h2>Card3</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
@@ -108,7 +108,7 @@
             </div>
   
             <div class="container card trans2" id="card4">
-              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbelize-travel-blog.chaacreek.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fbelize-kids-snorkeling.jpg&f=1&nofb=1" alt="activity" class="thumbnail">
+              <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbelize-travel-blog.chaacreek.com%2Fwp-content%2Fuploads%2F2015%2F10%2Fbelize-kids-snorkeling.jpg&f=1&nofb=1" alt="activity">
               <div class="container card-content">
                 <h2>Card4</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione beatae quidem molestiae maiores tempore commodi? Ex in cum earum consequuntur.</p>
