--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
         <nav class="container">
           <div class="mw container">
-            <h2 class="trans1">FLOATS</h2>
+            <h2 class="trans1">CTD</h2>
             <ul id="navbar-ul">
               <li><a href="#pre0">Home</a></li>
               <li><a href="#pre1">Article 1</a></li>
@@ -36,8 +36,8 @@
         <div id="pre0"></div>
         <section class="container" id="showcase">
           <div class="container mw" id="showcase-content">
-            <h1>CODE THE DREAM</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae?</p>
+            <h1>FLOATS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Voluptatem, dolorem laudantium? Quas nemo inventore amet illum quaenecessitatibus, ab beatae? <span><a href="./flexbox.html">See with FLEXBOX</a></span></p>
           </div>
         </section class="container">
 
