--- a/flexbox.html
+++ b/flexbox.html
@@ -21,7 +21,7 @@
             <div class="container" id="nav-text-con">
               <h2 class="trans1">CTD</h2>
               <ul class="container">
-                <li><a href="#pre0">Home</a></li>
+                <li><a class="active" href="#pre0">Home</a></li>
                 <li><a href="#pre1">Article 1</a></li>
                 <li><a href="#pre2">Article 2</a></li>
                 <li><a href="#pre3">Activities</a></li>
@@ -130,6 +130,6 @@
         </div>
       </div>
     </footer>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="./javascript/float.js" type="text/javascript"></script>
   </body>
 </html>
