removing unnecesary code

--- a/flexbox.html
+++ b/flexbox.html
@@ -126,10 +126,10 @@
         </div>
         <div id="footer-content">
           <p>&copy; 2020 Code the Dream.</p>
-          <address>777 Heaven St, San Francisco, CA.</address>
+          <address>000 Hello St, San Francisco, CA.</address>
         </div>
       </div>
     </footer>
-    <script src="./javascript/float.js" type="text/javascript"></script>
+    <script src="./app.js" type="text/javascript"></script>
   </body>
 </html>
