--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         </div>
         <div id="footer-content">
           <p>&copy; 2020 Code the Dream.</p>
-          <address>777 Heaven St, San Francisco, CA.</address>
+          <address>000 Hello St, San Francisco, CA.</address>
         </div>
       </div>
     </footer>
-    <script src="./javascript/float.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
