before last changes

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <a href="https://www.instagram.com" class="fa fa-instagram"></a>
         </div>
         <div id="footer-content">
-          <p>&copy; 2020 Code the Dream.</p>
+          <p>&copy; 2020 Johan Ochoa.</p>
           <address>000 Hello St, San Francisco, CA.</address>
         </div>
       </div>
